--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: ClapTrap
-url: https://github.com/lfpoulain/ClapTrap
-maintainer: lfpoulain 
+name: ClapTrapSocketIO
+url: https://github.com/gitsocketIO/claptrapSocketIO
+maintainer: socketIO
